# bswebpilot

./: pyproject.toml  run_tests.sh
bswebpilot/: base.py
bswebpilot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bswebpilot/bsplaywright/: bscmfx.py
bswebpilot/bsselenium/: webdriver.py
bswebpilot/utils/: locator.py  page.py
tests/: conftest.py  test_bscmfx.py  test_bswebdriver.py
