[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bswebpilot"
version = "0.1.0"
description = "Biblioteca de automatización web con soporte para Selenium y Playwright/Camoufox"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "BetSheet", email = "betsheet@protonmail.com"}
]
keywords = ["automation", "selenium", "playwright", "web-scraping", "browser-automation", "camoufox"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "camoufox>=0.1.0",
    "playwright>=1.40.0",
    "selenium>=4.0.0",
    "undetected-chromedriver>=3.0.0",
    "tkinter"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/bswebpilot"
Repository = "https://github.com/yourusername/bswebpilot"
Issues = "https://github.com/yourusername/bswebpilot/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["bswebpilot*"]
exclude = ["tests*", "__pycache__*"]

[tool.setuptools.package-data]
bswebpilot = ["py.typed"]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
